@@ -23,19 +23,19 @@ import net.fabricmc.fabric.api.resource.SimpleSynchronousResourceReloadListener;
 import net.fabricmc.fabric.impl.client.keybinding.KeyBindingRegistryImpl;
 import net.fabricmc.loader.api.FabricLoader;
 import net.fabricmc.loader.api.SemanticVersion;
-import net.fabricmc.loader.api.Version;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.network.AbstractClientPlayerEntity;
 import net.minecraft.client.render.OverlayTexture;
 import net.minecraft.client.render.VertexConsumerProvider;
 import net.minecraft.client.render.entity.model.PlayerEntityModel;
 import net.minecraft.client.util.InputUtil;
-import net.minecraft.nbt.NbtCompound;
+import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.NbtIo;
 import net.minecraft.resource.ResourceManager;
 import net.minecraft.resource.ResourceType;
 import net.minecraft.text.Style;
 import net.minecraft.text.Text;
+import net.minecraft.text.TextColor;
 import net.minecraft.text.TranslatableText;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.math.Vec3d;
@@ -45,6 +45,7 @@ import org.jetbrains.annotations.Nullable;
 import org.lwjgl.glfw.GLFW;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.URL;
@@ -52,6 +53,7 @@ import java.net.URLConnection;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
@@ -69,7 +71,7 @@ public class FiguraMod implements ClientModInitializer {
     public static final String MOD_VERSION = FabricLoader.getInstance().getModContainer("figura").get().getMetadata().getVersion().getFriendlyString();
 
     public static final boolean IS_CHEESE = LocalDate.now().getDayOfMonth() == 1 && LocalDate.now().getMonthValue() == 4;
-    public static NbtCompound cheese;
+    public static CompoundTag cheese;
 
     public static final ConfigKeyBind ACTION_WHEEL_BUTTON = new ConfigKeyBind("figura.config.action_wheel_button", GLFW.GLFW_KEY_B, "key.categories.misc", Config.ACTION_WHEEL_BUTTON);
     public static final ConfigKeyBind PLAYER_POPUP_BUTTON = new ConfigKeyBind("figura.config.player_popup_button", GLFW.GLFW_KEY_R, "key.categories.misc", Config.PLAYER_POPUP_BUTTON);
@@ -77,7 +79,7 @@ public class FiguraMod implements ClientModInitializer {
 
     public static int ticksElapsed;
 
-    public static final String GRADLE_PROPERTIES_LINK = "https://raw.githubusercontent.com/Blancworks/Figura/1.17/gradle.properties";
+    public static final String GRADLE_PROPERTIES_LINK = "https://raw.githubusercontent.com/Blancworks/Figura/main/gradle.properties";
     public static String latestVersion;
     public static int latestVersionStatus = 0;
 
@@ -165,7 +167,7 @@ public class FiguraMod implements ClientModInitializer {
             }
 
             @Override
-            public void reload(ResourceManager manager) {
+            public void apply(ResourceManager manager) {
                 PlayerDataManager.reloadAllTextures();
 
                 try {
@@ -199,7 +201,7 @@ public class FiguraMod implements ClientModInitializer {
     public static Path getModContentDirectory() {
         String userPath = (String) Config.MODEL_FOLDER_PATH.value;
         try {
-            Path p = userPath.isEmpty() ? getDefaultDirectory() : Path.of(userPath);
+            Path p = userPath.isEmpty() ? getDefaultDirectory() : new File(userPath).toPath();
             if (!Files.exists(p))
                 Files.createDirectories(p);
 
@@ -284,8 +286,11 @@ public class FiguraMod implements ClientModInitializer {
     }
 
     public static void sendToast(Object title, Object message) {
-        Text text = title instanceof Text t ? t : new TranslatableText(title.toString());
-        Text text2 = message instanceof Text m ? m : new TranslatableText(message.toString());
+        Text text, text2;
+        if (title instanceof Text) text = (Text) title;
+        else text = new TranslatableText(title.toString());
+        if (message instanceof Text) text2 = (Text) message;
+        else text2 = new TranslatableText(message.toString());
 
         MinecraftClient.getInstance().getToastManager().clear();
         MinecraftClient.getInstance().getToastManager().add(new FiguraToast(text, text2));
@@ -320,7 +325,7 @@ public class FiguraMod implements ClientModInitializer {
                 SemanticVersion latest = SemanticVersion.parse(latestVersion);
                 SemanticVersion current = SemanticVersion.parse(MOD_VERSION);
 
-                latestVersionStatus = current.compareTo((Version) latest);
+                latestVersionStatus = current.compareTo(latest);
             } catch (Exception e) {
                 latestVersionStatus = 0;
                 e.printStackTrace();
@@ -329,10 +334,10 @@ public class FiguraMod implements ClientModInitializer {
     }
 
     public static Style getAccentColor(Style style) {
-        return style.withColor((int) Config.ACCENT_COLOR.value);
+        return style.withColor(TextColor.fromRgb((int) Config.ACCENT_COLOR.value));
     }
 
-    public final static List<UUID> VIP = List.of(
+    public final static List<UUID> VIP = Arrays.asList(
             UUID.fromString("aa0e3391-e497-4e8e-8afe-b69dfaa46afa"), //salad
             UUID.fromString("da53c608-d17c-4759-94fe-a0317ed63876"), //zandra
             UUID.fromString("66a6c5c4-963b-4b73-a0d9-162faedd8b7f"), //fran
